[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/sequrity.png" type="Texture" id=1]
[ext_resource path="res://scripts/EnemySequrity.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.7091
height = 279.005

[node name="EnemySequrity" type="StaticBody2D"]
position = Vector2( 108.69, 341.215 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6.10352e-05, 1.7818 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 3.5636, 1.7818 )
shape = SubResource( 1 )

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( 43.6542, -3.5633 )

[node name="HealthAddTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="HealthAddTimer" to="." method="_on_HealthAddTimer_timeout"]
